Issue #2154775 by er.pushpinderrana, barnettech, kirkkala, InternetDevels | Wim Leers: Fixed In-place editing of title: works, but cursor is invisible.

--- a/core/modules/quickedit/css/quickedit.module.css
+++ b/core/modules/quickedit/css/quickedit.module.css
@@ -14,6 +14,7 @@
   z-index: 98;
   position: relative;
   cursor: pointer;
+  display: block;
 }
 .quickedit-editable:focus {
   outline: none;
